[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/DroidSansChinese.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/scripts/npc/NPC.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/ui/commandshow.wav" type="AudioStream" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 outline_color :hint_color;
uniform bool show_outline = false;

void fragment(){
	float size_x = 1.0/float(textureSize(TEXTURE,0).x);
	float size_y = 1.0/float(textureSize(TEXTURE,0).y);
	
	vec4 sprite_color = texture(TEXTURE,UV);
	float alpha = -4.0 * sprite_color.a;
	alpha += texture(TEXTURE,UV + vec2(size_x,0)).a;
	alpha += texture(TEXTURE,UV + vec2(-size_x,0)).a;
	alpha += texture(TEXTURE,UV + vec2(0,size_y)).a;
	alpha += texture(TEXTURE,UV + vec2(0,-size_y)).a;
	vec4 final_color = mix(sprite_color,outline_color,clamp(alpha,0.0,1.0));
	vec4 show_color;
	if (show_outline == true){
		show_color = vec4(final_color.rgb,clamp(abs(alpha) + sprite_color.a,0.0,1.0));
	}else{
		show_color = sprite_color;
	}
	
	COLOR = show_color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/outline_color = Color( 0.654902, 0.964706, 0.192157, 1 )
shader_param/show_outline = false

[sub_resource type="DynamicFont" id=3]
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 300, 300 )

[node name="NPC" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 302.088 ]
}

[node name="body_shadow" type="AnimatedSprite" parent="."]
position = Vector2( -25.3907, 46.7723 )

[node name="body" type="AnimatedSprite" parent="."]
material = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="nameLabel" type="Label" parent="."]
margin_left = -47.6179
margin_top = -87.0
margin_right = 48.3821
margin_bottom = -70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.839216, 0.784314, 0.639216, 1 )
custom_colors/font_outline_modulate = Color( 0.2, 0.2, 0.2, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_check" type="TextureButton" parent="."]
margin_left = -44.545
margin_top = -57.9085
margin_right = 45.455
margin_bottom = 72.0915
__meta__ = {
"_edit_use_anchors_": false
}

[node name="npc_talk" type="AudioStreamPlayer2D" parent="."]
max_distance = 400.0
bus = "SFX"
area_mask = 2

[node name="range_check" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range_check"]
shape = SubResource( 4 )

[node name="talkPlayer" type="AnimationPlayer" parent="."]

[node name="range_timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="clickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="mouse_entered" from="mouse_check" to="." method="_on_mouse_check_mouse_entered"]
[connection signal="mouse_exited" from="mouse_check" to="." method="_on_mouse_check_mouse_exited"]
[connection signal="pressed" from="mouse_check" to="." method="_on_mouse_check_pressed"]
[connection signal="timeout" from="range_timer" to="." method="_on_range_timer_timeout"]
